recursion.cons.length.Length.scala.error
Erreur de compilation :
Length:7: error: not found: value longueur
      return 1 + longueur(l.tail) }
                 ^